--- a/app/views/mechanics/show.html.erb
+++ b/app/views/mechanics/show.html.erb
@@ -9,7 +9,7 @@
   </ul>
 </section>
 <p>Add a ride to workload:</p>
-<%= form_tag "/mechanic/#{@mechanic.id}" do %>
+<%= form_tag "/mechanic/#{@mechanic.id}", method: :patch do %>
   <%= label_tag :ride_id %>
   <%= search_field_tag :ride_id %>
   <%= submit_tag 'Submit' %>
